# recipe-chatbot

./: .gitignore  pyproject.toml
backend/: utils.py
data/: sample_queries.csv
homeworks/my_hw2/: README.md  failure_mode_taxonomy.md  results_20250524_201340.csv  results_20250524_204322.csv  synthetic_queries_for_analysis.csv  synthetic_queries_for_analysis_es.csv
notebooks/: quantify_failure_modes.ipynb  test_connection_azure.ipynb
prompts/: load_yaml_file.py  prompts.yaml
